Fix heroimage styling of blog page on mobile (#4958)
* Fix heroimage styling of blog page on mobile

* Add correct mobile styling to release posts

--- a/website/src/css/components/blog/_BlogPost.scss
+++ b/website/src/css/components/blog/_BlogPost.scss
@@ -5,6 +5,10 @@
     &__image {
         max-width: 100%;
         max-height: 140px;
+
+        @include media-breakpoint-down(sm) {
+            max-height: none;
+        }
     }
 
     &__byline {
@@ -55,5 +59,14 @@
         figure {
             margin-bottom: 3rem;
         }
+    }
+}
+
+.flex-card {
+    flex-flow: row wrap;
+    gap: 1rem;
+
+    @include media-breakpoint-down(sm) {
+        flex-flow: column;
     }
 }
